--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "next": "12.1.0",
     "next-offline": "5.0.2",
     "next-routes": "1.4.2",
-    "react": "16.13.1",
+    "react": "^17.0.2",
     "react-copy-to-clipboard": "5.0.2",
-    "react-dom": "16.13.1",
+    "react-dom": "^17.0.2",
     "react-google-charts": "3.0.15",
     "react-i18next": "8.4.0",
     "react-icons": "3.11.0",
