--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "react-google-charts": "3.0.15",
     "react-i18next": "8.4.0",
     "react-icons": "3.11.0",
-    "request-country": "0.1.5"
+    "request-country": "0.1.5",
+    "styled-jsx": "^5.1.1"
   },
   "devDependencies": {
     "ava": "3.13.0",
