--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "react-i18next": "8.4.0",
     "react-icons": "3.11.0",
     "request-country": "0.1.5",
-    "styled-jsx": "^5.1.1"
+    "styled-jsx": "3.4.2"
   },
   "devDependencies": {
     "ava": "3.13.0",
